--- a/css/puls4.css
+++ b/css/puls4.css
@@ -3,7 +3,9 @@ header{background:#444;color:#fff;padding:.5em;}
 header .logo{border-right:1px solid #22bce0;width:60px;}
 header .logo img{width:52px}
 header .titular{margin:0 80px 0 70px;}
-header .titular .titulo{font-size:18px;font-weight:normal;margin:0;padding:0}
+header .titular .filtro{color:#22bce0;font-size:14px;font-style:italic;font-weight:bold;text-decoration:none}
+header .titular .publicar{background:#dd4f24;color:#fff;float:right;font-style:italic;padding:.2em .5em;text-decoration:none;text-shadow:1px 1px 0 #000}
+header .titular .titulo{font-size:18px;font-weight:normal;margin:0}
 header .usuario .avatar img{width:50px;border-radius:50%}
 nav{background:#22bce0}
 .left{float:left}
