--- a/css/puls4.styl
+++ b/css/puls4.styl
@@ -1,4 +1,5 @@
 azul= #22bce0
+naranja= #dd4f24
 gris_oscuro = #444
 
 body
@@ -21,13 +22,28 @@ header
            width 52px
     .titular
         margin 0 80px 0 70px 
+        
+        .filtro 
+            color azul
+            font-size 14px
+            font-style italic 
+            font-weight bold
+            text-decoration none
 
+        .publicar
+            background naranja
+            color #fff
+            float right
+            font-style italic
+            padding 0.2em 0.5em
+            text-decoration none
+            text-shadow 1px 1px 0px black
 
         .titulo
             font-size 18px 
             font-weight normal 
             margin 0
-            padding 0
+
 
     .usuario
         .avatar
