--- a/css/puls4.styl
+++ b/css/puls4.styl
@@ -1,21 +1,61 @@
 azul= #22bce0
 naranja= #dd4f24
 gris_oscuro = #444
+gris_texto = #7a7a7a
 
+@font-face {
+    font-family: 'iconitos';
+    src:url('../fonts/icomoon.eot');
+    src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf') format('truetype'),
+        url('../fonts/icomoon.woff') format('woff'),
+        url('../fonts/icomoon.svg#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+a 
+   color naranja
 body
    background #e8e8e8
    color gris_oscuro
    color red
    font-family arial 
    font-size 16px
+   position relative 
+
+footer 
+    background naranja
+    color rgba(white, 0.5)
+    padding 1em 0 
+    text-align center
+    width 100%
+
+    h3
+        font-size 14px 
+        font-weight normal 
+
+        strong
+            display block
+
+        .mejor
+            &:before
+            &:after
+                content " - "
 
 header 
     background gris_oscuro
+    box-shadow 0 5px 0 rgba(0,0,0,0.2)
     color white 
+    overflow hidden 
     padding 0.5em
+    position relative
+    z-index 55
+
 
     .logo 
         border-right 1px solid azul
+        float left
         width 60px
 
         img
@@ -39,6 +79,13 @@ header
             text-decoration none
             text-shadow 1px 1px 0px black
 
+            &:before
+                font-family iconitos
+                content "\e600"
+                display inline-block
+                margin 0 3px 0 0 
+                text-shadow none
+
         .titulo
             font-size 18px 
             font-weight normal 
@@ -46,15 +93,183 @@ header
 
 
     .usuario
+        position absolute 
+        top 10px
+        right 10px
         .avatar
+            margin 0 1.1em 0 0
+            position relative
+            z-index 1
+
             img
-                width 50px
                 border-radius 50%
+                width 50px
+        .flechita
+            background naranja
+            color white
+            display block
+            padding 2px
+            position absolute
+            right 0
+            text-align right
+            text-decoration none
+            top 15px
+            width 50%
+            z-index 0
+
+            &:after
+                content "\e603"
+                display black
+                font-family iconitos
+                margin 1px 0 0 1px 
+                text-shadow 1px 1px 0px black
 
 nav
-    background azul 
-.left 
-    float left
+    background azul
+    border-left 15px solid white 
+    position relative
+    
+    &:before
+        border-bottom 20px solid transparent
+        border-top 20px solid transparent
+        border-left 7px solid white
+        content ""
+        left 0px
+        position absolute
+        relative 0
 
-.right
-    float right
+    .menu
+        height 40px
+        line-height 40px
+        margin 0
+        padding 0
+        overflow-x auto
+        white-space nowrap 
+
+        &::-webkit-scrollbar
+            display none 
+
+        li 
+            display inline-block
+
+            a 
+               color white
+               display block
+               margin 0 0.5em
+               padding 0 0.2em 
+               text-decoration none
+               
+            &:hover
+               background rgba(black,0.1)
+.posts
+    padding 0.5em
+
+
+    .post 
+        background white
+        border-radius 0 0 0.5em 0.5em
+        box-shadow 2px 2px 10px rgba(black, 0.5em)
+        color gris_texto 
+        margin 0 0 0.5em 0 
+        
+
+        .acciones
+            border-top 3px solid azul 
+            padding 0.5em
+            overflow hidden
+            .datos
+                float right
+
+                .comentarios 
+                   background gris_oscuro
+                   border-radius 3px
+                   color white
+                   margin 0 1em 0 0
+                   padding 2px 
+                   text-decoration none
+
+                .estrellita 
+                   text-decoration none
+
+                   &:before
+                       color #fcb92d 
+                       content "\e601"
+                       font-family "iconitos"
+
+            .votos
+                float left
+
+                .down
+                .up 
+                    text-decoration none
+                    &:before
+                        font-family "iconitos"
+                        font-size 1.5em 
+                        vertical-align middle
+
+                .down
+                    color red
+                    &:before
+                        content "\e602"
+                        
+                .up 
+                    color green 
+                    &:before
+                        content "\e603"
+        .descripcion
+
+            .detalles 
+                height 160px
+                margin-left 130px
+                
+                .autor
+                    margin 0.5em 0 2em 0
+
+                .fecha 
+                    float right
+                    margin 0 1em 0 0
+                .tag
+                    background azul
+                    border-radius 0.5em 
+                    color white
+                    padding 0.2em 0.5em 
+                    text-decoration none 
+
+
+                .titulo
+                    color gris_oscuro
+                    font-size 18px
+                    font-style italic
+                    margin 0 
+                    padding 0.5em 0.5em 0 0 
+
+            .imagen
+                float left
+
+                img
+                    height 160px
+                    vertical-align top 
+                    width 120px
+
+@media screen and (min-width: 768px)
+    
+    header
+        .titular
+            .publicar
+                font-size 1.1em
+                padding-left 3em 
+                position relative
+                &:before
+                    left 0
+                    font-size 2.5em
+                    position absolute
+                    top -10px
+    .posts
+        .post
+            display inline-block
+            width 48%
+            vertical-align top 
+
+            &:nth-child(odd)
+                margin-right 2%
+
